Beta version ready

--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,18 @@
   "type": "typo3-cms-extension",
   "description": "Simple gallery extension for TYPO3.",
   "version": "1.0.0",
+  "license": "GPL-2.0-or-later",
   "require": {
-    "typo3/cms-core": "^11.5 || ^13.4"
+    "typo3/cms-core": "^13.0"
   },
   "autoload": {
     "psr-4": {
       "Gmbit\\Pepgallery\\": "Classes/"
+    }
+  },
+  "extra": {
+    "typo3/cms": {
+      "extension-key": "pepgallery"
     }
   }
 }
